@startuml
skinparam classAttributeIconSize 0



class DetailedResultProcessParser{
- listeProcessus : List<Process>
+ DetailedResultProcessParser(listeProcessus : List<Process>)
+ parse(cheminFichier : String) : List<Process>
}
DetailedResultProcessParser ..|> FileParserStrategy



class GlobalResultProcessParser{
- listeProcessus : List<Process>
+ GlobalResultProcessParser(listeProcessus : List<Process>)
+ parse(cheminFichier : String) : List<Process>
}
GlobalResultProcessParser ..|> FileParserStrategy
class AlgoConfiguration{
- nomAlgorithme : String
- fichierResultatsDetailles : String
- fichierResultatsGlobaux : String
- quantum : Integer
+ AlgoConfiguration(nomAlgorithme : String, fichierResultatsDetailles : String, fichierResultatsGlobaux : String, quantum : Integer)
+ getNomAlgorithme() : String
+ getFichierResultatsDetailles() : String
+ getFichierResultatsGlobaux() : String
+ getQuantum() : Integer
}
class Schedule{
- processor : Processor
- dateDebutExecution : int
- dateFinExecution : int
+ Schedule(processor : Processor, dateDebutExecution : int, dateFinExecution : int)
+ getProcessor() : Processor
+ getDateDebutExecution() : int
+ getDateFinExecution() : int
}


FileConfiguration o-- "*" AlgoConfiguration


class FileConfiguration{
- fichierProcessus : String
- fichierRessourcesDisponibles : String
- fichierMetriquesGlobales : String
- listeAlgorithmes : List<AlgoConfiguration>
+ FileConfiguration(fichierProcessus : String, fichierMetriquesGlobales : String, fichierRessourcesDisponibles : String, listeAlgorithmes : List<AlgoConfiguration>)
+ getFichierProcessus() : String
+ getFichierRessourcesDisponibles() : String
+ getListeAlgorithmes() : List<AlgoConfiguration>
+ getFichierMetriquesGlobales() : String
}
class InitialProcessParser{
+ parse(cheminFichier : String) : List<Process>
}
InitialProcessParser ..|> FileParserStrategy

class Processor{
- id : String
+ Processor(idProcessor : String)
+ getId() : String
}




Process o--> "*" ExecutionInfo

class Process{
- id : int
- dateSoumission : int
- tempsExecution : int
- requiredRam : int
- deadline : int
- priority : int
- executionsParAlgo : HashMap<String,ExecutionInfo>
+ Process(id : int, dateSoumission : int, tempsExecution : int, requiredRam : int, deadline : int, priority : int)
+ getId() : int
+ getDateSoumission() : int
+ getTempsExecution() : int
+ getRequiredRam() : int
+ getDeadline() : int
+ getPriority() : int
+ getExecutionInfo(nomAlgo : String) : ExecutionInfo
+ addExecution(nomAlgo : String, e : ExecutionInfo) : void
+ getAllExecutions() : HashMap<String,ExecutionInfo>
}








ExecutionInfo o--> "*" Schedule

class ExecutionInfo{
- dateDebut : int
- dateFin : int
- listeSchedules : List<Schedule>
+ ExecutionInfo()
+ setDateDebut(dateDebut : int) : void
+ setDateFin(dateFin : int) : void
+ isFinished() : boolean
+ getListSchedules() : List<Schedule>
+ addSchedule(s : Schedule) : void
+ setSchedules(listeSchedules : List<Schedule>) : void
+ getDateDebut() : int
+ getDateFin() : int
}

Resultats o--> "*" Process
Resultats o--> "*" Metrics


class Resultats{
- listeProcessus : List<Process>
- listeMetriques : List<Metrics>
+ Resultats(listeProcessus : List<Process>, listeMetriques : List<Metrics>)
+ getListeProcessus() : List<Process>
+ getListeMetrics() : List<Metrics>
}

ProcessParser o--> "*" FileParserStrategy


class ProcessParser{
- strategie : FileParserStrategy<Process>
+ ProcessParser(strategie : FileParserStrategy<Process>)
+ parse(cheminFichier : String) : List<Process>
}





class Metrics{
- nomAlgo : String
- tempsReponseMoyen : double
- tempsAttenteMoyen : double
- makespan : int
+ Metrics(nomAlgorithme : String, tempsReponseMoyen : double, tempsAttenteMoyen : double, makespan : int)
+ getTempsReponseMoyen() : double
+ getTempsAttenteMoyen() : double
+ getMakespan() : int
+ getNomAlgorithme() : String
}



Schedule o--> "1" Processor
interface FileParserStrategy{
+ parse(cheminFichier : String) : List<T>
}
@enduml